apps/rancher/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-system
  annotations:
    argocd.argoproj.io/sync-wave: "0"
